; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_kill_on_zone_map_exhaustion.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_memorystatus.c_memorystatus_kill_on_zone_map_exhaustion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@kMemorystatusKilledZoneMapExhaustion = common dso_local global i32 0, align 4
@OS_REASON_JETSAM = common dso_local global i32 0, align 4
@JETSAM_REASON_ZONE_MAP_EXHAUSTION = common dso_local global i32 0, align 4
@OS_REASON_NULL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [76 x i8] c"memorystatus_kill_on_zone_map_exhaustion: failed to allocate jetsam reason\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memorystatus_kill_on_zone_map_exhaustion(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @FALSE, align 4
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @kMemorystatusKilledZoneMapExhaustion, align 4
  %10 = call i32 @memorystatus_kill_process_async(i32 -1, i32 %9)
  store i32 %10, i32* %3, align 4
  br label %25

11:                                               ; preds = %1
  %12 = load i32, i32* @OS_REASON_JETSAM, align 4
  %13 = load i32, i32* @JETSAM_REASON_ZONE_MAP_EXHAUSTION, align 4
  %14 = call i64 @os_reason_create(i32 %12, i32 %13)
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = load i64, i64* @OS_REASON_NULL, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %11
  %19 = call i32 @printf(i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str, i64 0, i64 0))
  br label %20

20:                                               ; preds = %18, %11
  %21 = load i32, i32* %2, align 4
  %22 = load i32, i32* @kMemorystatusKilledZoneMapExhaustion, align 4
  %23 = load i64, i64* %4, align 8
  %24 = call i32 @memorystatus_kill_process_sync(i32 %21, i32 %22, i64 %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %20, %8
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @memorystatus_kill_process_async(i32, i32) #1

declare dso_local i64 @os_reason_create(i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @memorystatus_kill_process_sync(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
